# eigen-experiments

./: CMakeLists.txt  Z.hpp  eigen-1.cpp  eigen2.cpp
